welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:5: error: not found: value mgetDirection
while (mgetDirection() == Direction.SOUTH && !estDosMur()){
       ^