welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
while (getDirection() == Direction.NORTH && !estFaceMur()){
  avance()
}
while (mgetDirection() == Direction.SOUTH && !estDosMur()){
  recule()
}